# tuigreet

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: nix.yml  pr.yml  release.yml  rust.yml
contrib/: example.config.toml
contrib/locales/en-US/: tuigreet.ftl
contrib/man/: tuigreet-1.scd
crates/tuigreet/: Cargo.toml  build.rs
crates/tuigreet-locales/: Cargo.toml  i18n.toml
crates/tuigreet-locales/locales/tr-TR/: tuigreet-locales.ftl
crates/tuigreet-locales/src/: lib.rs
crates/tuigreet/src/: main.rs
crates/tuigreet/src/ui/: i18n.rs  mod.rs  prompt.rs
nix/: package.nix  shell.nix
src/: greeter.rs  info.rs  ipc.rs  keyboard.rs  main.rs  output.rs  power.rs  types.rs
src/config/: env.rs  parser.rs  schema.rs
src/ui/: background.rs  mod.rs  prompt.rs  tests.rs  util.rs
src/ui/bg_animation/: matrix.rs  mod.rs
