[package]
name         = "tuigreet"
description  = "Stylish graphical console greeter for greetd, built with Ratatui "
version      = "0.10.2"
authors      = [ "Antoine POPINEAU <antoine@popineau.eu>", "NotAShelf <raf@notashelf.dev" ]
edition      = "2024"
license      = "GPL-3.0-only"
rust-version = "1.91.0"
repository   = "https://github.com/notashelf/tuigreet"

[lib]
crate-type = [ "rlib" ]
name       = "tuigreet"
path       = "src/lib.rs"

[[bin]]
name = "tuigreet"
path = "src/main.rs"

[features]
default    = [  ]
nsswrapper = [  ]

[dependencies]
ansi-to-tui = "7.0.0"
chrono = { version = "0.4.42", features = [ "unstable-locales" ] }
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
dirs = "6.0.0"
futures = "0.3.31"
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = [ "tokio-codec" ] }
i18n-embed = { version = "0.16.0", features = [ "desktop-requester", "fluent-system" ] }
i18n-embed-fl = "0.10.0"
nix = { version = "0.31.1", features = [ "feature" ] }
notify = { version = "8.2.0", features = [ "macos_fsevent" ] }
rand = "0.10.0"
rust-embed = "8.9.0"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = [ "derive" ] }
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
  "crossterm",
  "unstable",
] }
unic-langid = "0.9.6"
utmp-rs = "0.4.0"
uzers = "0.12.2"
zeroize = "1.8.2"

[dev-dependencies]
greetd-stub   = "0.3.0"
tempfile      = "3.10.1"
unicode-width = "0.2.0"

[profile.release]
lto = true
