[workspace]
members  = [ "crates/*" ]
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "GPL-3.0-only"
repository   = "https://github.com/notashelf/tuigreet"
rust-version = "1.91.0"
version      = "0.10.2"

[workspace.dependencies]
# Workspace dependencies
tuigreet-config  = { path = "crates/tuigreet-config" }
tuigreet-locales = { path = "crates/tuigreet-locales" }
tuigreet-system  = { path = "crates/tuigreet-system" }
tuigreet-theme   = { path = "crates/tuigreet-theme" }
tuigreet-types   = { path = "crates/tuigreet-types" }

# External
ansi-to-tui = "7.0.0"
chrono = { version = "0.4.42", features = [ "unstable-locales" ] }
codespan-reporting = "0.13.1"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
dirs = "6.0.0"
futures = "0.3.31"
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = [ "tokio-codec" ] }
i18n-embed = { version = "0.16.0", features = [ "desktop-requester", "fluent-system" ] }
i18n-embed-fl = "0.10.0"
nix = { version = "0.31.3", features = [ "feature" ] }
notify = { version = "8.2.0", features = [ "macos_fsevent" ] }
rand = "0.10.1"
rust-embed = "8.9.0"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = [ "derive" ] }
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
  "crossterm",
  "unstable",
] }
unic-langid = "0.9.6"
utmp-rs = "0.4.0"
uzers = "0.12.2"
zeroize = "1.8.2"

# Dev
greetd-stub   = "0.3.0"
tempfile      = "3.10.1"
unicode-width = "0.2.0"

[profile.release]
lto = true
